hphp/hack/test/typecheck/string_newline2.php.exp
File "string_newline2.php", line 18, characters 10-10:
Invalid return type (Typing[4110])
File "string_newline2.php", line 6, characters 20-25:
This is a string
File "string_newline2.php", line 18, characters 10-10:
It is incompatible with an int
